--- a/src/index.css
+++ b/src/index.css
@@ -29,12 +29,12 @@ body {
 
 .grid-layout {
   display: grid;
-  grid-template-columns: 1.5rem minmax(0, 22.875rem) 1.5rem;
+  grid-template-columns: 1.5rem 22.875rem 1.5rem;
   margin: 0 auto;
 }
 
 .grid-full-bleed {
-  grid-column: 1 / -1;
+  grid-column: 1 / 4;
 }
 
 .grid-content {
