--- a/src/index.css
+++ b/src/index.css
@@ -50,7 +50,7 @@ body {
   @apply grid gap-16 p-4 rounded-[1.5rem] transition-colors;
   
   /* 1. Set the variable defaults (Lime variant) */
-  --card-fg: var(--color-red);
+  --card-fg: var(--color-black);
   --card-btn-bg: var(--color-white);
   --card-btn-fg: var(--color-black);
   
@@ -69,7 +69,7 @@ body {
 
   &.is-light {
     /* 3. Update variables for Light variant */
-    --card-fg: var(--color-blue-500);
+    --card-fg: var(--color-black);
     --card-btn-bg: var(--color-zinc-100);
     --card-btn-fg: var(--color-black);
     
